--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "erfiaaans",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.11.5"
   }
